--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ body {
    resize: none;
    padding: 10px 20px 0;
 }
-.footer__form-input:hover {
+.footer__form-input:hover,
+.footer__form-text:hover {
    opacity: 1;
    border-left: 5px solid #355b82;
    padding-left: 15px;
